{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 13,
  "lineage": "fbd9b667-9ce5-01b1-d462-7de7db785dbc",
  "resources": [
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_alb",
      "provider": "module.ecs_service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269945612333:loadbalancer/app/ecs-alb/cf3fe69154948325",
            "arn_suffix": "app/ecs-alb/cf3fe69154948325",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-alb-2045890065.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:269945612333:loadbalancer/app/ecs-alb/cf3fe69154948325",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-092b4bebc766c9bb8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04bfb1b82a4ba8608"
              },
              {
                "subnet_id": "subnet-0bfd390eabc57e9ef"
              }
            ],
            "subnets": [
              "subnet-04bfb1b82a4ba8608",
              "subnet-0bfd390eabc57e9ef"
            ],
            "vpc_id": "vpc-0eb6c32c3c0c8c507",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs_service.aws_security_group.ecs_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_listener",
      "provider": "module.ecs_service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269945612333:listener/app/ecs-alb/cf3fe69154948325/5d81eb7f0971521d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269945612333:targetgroup/ecs-tg/42ada3d8076d0ac8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269945612333:listener/app/ecs-alb/cf3fe69154948325/5d81eb7f0971521d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:269945612333:loadbalancer/app/ecs-alb/cf3fe69154948325",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_service.aws_lb.ecs_alb",
            "module.ecs_service.aws_lb_target_group.ecs_tg",
            "module.ecs_service.aws_security_group.ecs_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg",
      "provider": "module.ecs_service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269945612333:targetgroup/ecs-tg/42ada3d8076d0ac8",
            "arn_suffix": "targetgroup/ecs-tg/42ada3d8076d0ac8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269945612333:targetgroup/ecs-tg/42ada3d8076d0ac8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:269945612333:loadbalancer/app/ecs-alb/cf3fe69154948325"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0eb6c32c3c0c8c507"
          }
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "module.ecs_service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269945612333:security-group/sg-092b4bebc766c9bb8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092b4bebc766c9bb8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "ecs-fastapi-sg",
            "name_prefix": "",
            "owner_id": "269945612333",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb6c32c3c0c8c507"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}